# BeatTogether.Quest

./: .gitignore  Android.mk  Application.mk  BeatTogether.Quest.code-workspace  BeatTogether.cfg  CMakeLists.txt  CMakeSettings.json  ExampleBuild.ps1  ExampleQMOD.ps1  Makefile  README.md  addr2line.bat  assets_include.cmake  bmbfmod.json  build.ps1  buildBMBF.ps1  buildQMOD.ps1  buildQP.ps1  copy.ps1  createqmod.ps1  logging.ps1  mod.json  mod.template.json  mod.template.json.bak  ndk-stack.ps1  pull-tombstone.ps1  qpm.json  qpm.shared.json  validate-modjson.ps1
assets/: ServerSelectionController.bsml
include/: BTConfig.hpp  BTMacros.hpp  BeatTogether.hpp  _config.h  assets.hpp  config.hpp  hooking.hpp  logging.hpp  tasks.hpp
include/Installers/: BTAppInstaller.hpp  BTMenuInstaller.hpp  MenuInstaller.hpp
include/Models/: ServerDetails.hpp
include/Registries/: ServerDetailsRegistry.hpp
include/UI/: ServerSelectionController.hpp
scripts/: bumpQPMdeps.ps1
shared/Models/: ServerDetails.hpp  TemporaryServerConfig.hpp  TemporaryServerDetails.hpp
shared/Registries/: ServerDetailsRegistry.hpp
src/: BeatTogether.cpp  config.cpp  main.cpp
src/Hooks/: FlowCoordinator.cpp  MainMenuViewController.cpp  MultiplayerModeSelectionFlowCoordinator.cpp  PlatformAuthenticationTokenProvider.cpp  ViewControllerTransitionHelpers.cpp
src/Installers/: BTAppInstaller.cpp  BTMenuInstaller.cpp  MenuInstaller.cpp
src/Models/: ServerDetails.cpp  TemporaryServerConfig.cpp  TemporaryServerDetails.cpp
src/Registries/: ServerDetailsRegistry.cpp
src/UI/: ServerSelectionController.cpp
